--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -1,6 +1,8 @@
 /* Bootstrap + DataTables base imports */
 @import url("libs/bootstrap.min.css");
 @import url("libs/datatables.min.css");
+/* Sidebar CSS */
+@import url("sidebar.css");
 
 /* Your custom overrides */
 body {
@@ -12,3 +14,5 @@ body {
   border-radius: 10px;
   overflow: hidden;
 }
+
+
